fixed align overflow

--- a/src/style/homescreen.scss
+++ b/src/style/homescreen.scss
@@ -101,20 +101,21 @@ img {
         position: fixed;
         top: 300px;
         left: 5%;
+        width: 80px;
         
     }
     .font-state-right {
         position: fixed;
         top: 300px;
         left: 80%;
-        
+        width: 80px;
     }
 
     .font-state-center {
         position: fixed;
         top: 300px;
         left: 45%;
-        
+        width: 80px;
     }
 
 }
