--- a/src/style/media_queries.scss
+++ b/src/style/media_queries.scss
@@ -27,7 +27,7 @@
         .font-state-right {
             position: absolute;
             top: 50px;
-            left: 900px !important;
+            left: 855px !important;
             color: #777;
             font-size: xx-large;
         }
